--- a/gerenciador/package.json
+++ b/gerenciador/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest",
     "start": "node src/server.js",
-    "secure-mode": "jest --watchAll --verbose=true",
+    "secure-mode": "jest --watchAll --verbose=false",
     "migrate-test": "knex migrate:latest --env test"
   },
   "keywords": [],
@@ -17,11 +17,15 @@
     "supertest": "3.3.0"
   },
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "1.18.3",
     "consign": "0.1.6",
     "express": "4.16.4",
+    "jwt-simple": "0.5.5",
     "knex": "0.15.2",
     "knex-logger": "^0.1.0",
-    "mysql2": "3.6.2"
+    "mysql2": "3.6.2",
+    "passport": "0.4.0",
+    "passport-jwt": "4.0.0"
   }
 }
