--- a/gerenciador/package.json
+++ b/gerenciador/package.json
@@ -24,6 +24,7 @@
     "jwt-simple": "0.5.5",
     "knex": "0.15.2",
     "knex-logger": "^0.1.0",
+    "moment": "2.29.4",
     "mysql2": "3.6.2",
     "passport": "0.4.0",
     "passport-jwt": "4.0.0"
